# Skillbox_30

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  solution_1.cpp  solution_2.cpp  solution_3.cpp
